--- a/assets/scss/chunk/_contacts.scss
+++ b/assets/scss/chunk/_contacts.scss
@@ -82,6 +82,11 @@
 .phone {
 	font-weight: 500;
 	color: var(--grey-color);
+	transition: color 0.2s;
+
+	&:hover {
+		color: var(--dark-color);
+	}
 }
 
 .map {
