--- a/assets/components/calc/_calc.scss
+++ b/assets/components/calc/_calc.scss
@@ -25,30 +25,37 @@
 
 	&__inner {
 		position: relative;
-		display: flex;
-		align-items: stretch;
-		justify-content: space-between;
 		margin-bottom: 20px;
 	}
 
 	&__phone {
 		outline: none;
-		border: 1px solid var(--light-color);
+		border: 2px solid var(--light-color);
 		border-radius: 15px;
-		padding: 10px 15px;
-		height: 100%;
+		padding: 15px;
+		width: 100%;
 		color: var(--light-color);
 		background-color: transparent;
 	}
 
 	&__send {
+		position: absolute;
+		right: 0;
+		top: 0;
 		border: none;
+		border: 2px solid var(--accent-color);
 		border-radius: 15px;
 		padding: 15px;
 		height: 100%;
 		color: var(--light-color);
 		background-color: var(--accent-color);
+		transition: all 0.3s;
 		cursor: pointer;
+
+		&:hover {
+			border: 2px solid var(--light-color);
+			background-color: transparent;
+		}
 	}
 }
 
