Вёрста и написание скрипта для плитки тегов

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -40,6 +40,7 @@
 @import 'chunk/numbers';
 @import 'chunk/questions';
 @import 'chunk/contacts';
+@import 'chunk/tags';
 @import 'chunk/footer';
 
 @import 'chunk/product-repair';
