Подключение модальных окон

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -12,6 +12,7 @@
 
 // * Подключение стилей swiper-слайдера
 @import 'libs/swiper-bundle.min';
+@import '../components/modal/modal';
 @import '../components/slider/slider';
 @import '../components/spollers/spollers';
 
