--- a/assets/components/header/header.html
+++ b/assets/components/header/header.html
@@ -18,7 +18,7 @@
 				</svg>
 				<div class="links__item links-item">
 					<a class="links-item__phone link-reset" href="tel:+79999999999">8-999-999-99-99</a>
-					<a class="links-item__modal link-reset" href="#/">Оставить заявку</a>
+					<a class="links-item__modal link-reset modal-link" href="#modalApplication">Оставить заявку</a>
 				</div>
 			</div>
 			<a class="header__link link link-reset" href="#/">Рассчитать стоимость</a>
