--- a/assets/components/modal/_modal.scss
+++ b/assets/components/modal/_modal.scss
@@ -23,9 +23,8 @@
 	&__content {
 		position: relative;
 		padding: 30px;
-		max-width: 800px;
-		color: $black;
-		background-color: $white;
+		max-width: 400px;
+		background-color: var(--light-color);
 		opacity: 0;
 		transform: perspective(600px) translate(0, -100%) rotateX(45deg);
 		transition: all 0.8s ease 0s;
@@ -37,7 +36,7 @@
 		right: 10px;
 		top: 10px;
 		text-decoration: none;
-		color: $black;
+		color: var(--dark-color);
 	}
 
 	&__title {
