Вёрстка правого сайдбара

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -41,6 +41,7 @@
 @import 'chunk/questions';
 @import 'chunk/contacts';
 @import 'chunk/footer';
+@import '../components/sidebar/sidebar';
 
 @import 'chunk/product-repair';
 @import 'chunk/product-stages';
