--- a/assets/scss/chunk/_tags.scss
+++ b/assets/scss/chunk/_tags.scss
@@ -11,9 +11,10 @@
 		overflow: hidden;
 		margin-bottom: 20px;
 		gap: 7px;
+		max-height: 35px;
 
-		&.hidden {
-			max-height: 35px;
+		&.tags-visible {
+			max-height: max-content;
 		}
 	}
 }
