--- a/assets/scss/chunk/_where.scss
+++ b/assets/scss/chunk/_where.scss
@@ -21,6 +21,7 @@
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
+	transition: all 0.3s;
 
 	&__title {
 		@include adaptive-font(17, 16);
@@ -33,6 +34,11 @@
 		color: var(--light-color);
 		background: rgb(52 52 52 / 50%);
 		backdrop-filter: blur(2px);
+	}
+
+	&:hover {
+		box-shadow: 0 20px 20px rgb(0 0 0 / 25%);
+		transform: translateY(-15px);
 	}
 
 	@media (max-width: 576px) {
