--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -17,6 +17,7 @@
 @import '../components/spollers/spollers';
 
 // * Main styles
+@import '../components/quiz/quiz';
 @import '../components/header/header';
 @import '../components/select/select';
 @import 'chunk/hero';
