--- a/assets/components/modal/_modal.scss
+++ b/assets/components/modal/_modal.scss
@@ -22,12 +22,17 @@
 
 	&__content {
 		position: relative;
+		border-radius: 15px;
 		padding: 30px;
 		max-width: 400px;
 		background-color: var(--light-color);
 		opacity: 0;
 		transform: perspective(600px) translate(0, -100%) rotateX(45deg);
 		transition: all 0.8s ease 0s;
+
+		&--quiz {
+			max-width: 600px;
+		}
 	}
 
 	&__close {
