--- a/assets/components/modal/_modal.scss
+++ b/assets/components/modal/_modal.scss
@@ -24,15 +24,12 @@
 		position: relative;
 		border-radius: 15px;
 		padding: 30px;
-		max-width: 400px;
+		width: 100%;
+		max-width: 600px;
 		background-color: var(--light-color);
 		opacity: 0;
 		transform: perspective(600px) translate(0, -100%) rotateX(45deg);
 		transition: all 0.8s ease 0s;
-
-		&--quiz {
-			max-width: 600px;
-		}
 	}
 
 	&__close {
