--- a/assets/components/modal/modal-quiz.html
+++ b/assets/components/modal/modal-quiz.html
@@ -1,6 +1,6 @@
 <div class="modal" id="modalQuiz">
 	<div class="modal__body">
-		<div class="modal__content modal__content--quiz">
+		<div class="modal__content">
 			<a class="modal__close close-modal" href="#header">X</a>
 			<form class="quiz" method="POST"></form>
 		</div>
