Вёрстка секции с отзывами

--- a/assets/components/slider/slider.html
+++ b/assets/components/slider/slider.html
@@ -33,6 +33,6 @@
 			</div>
 		</div>
 	</div>
-	<div class="swiper-btn swiper-btn--prev"></div>
-	<div class="swiper-btn swiper-btn--next"></div>
+	<div class="swiper-btn swiper-btn--prev experts-btn--prev"></div>
+	<div class="swiper-btn swiper-btn--next experts-btn--next"></div>
 </div>
