Вёрстка секции "Видеоотзывы"

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -29,6 +29,7 @@
 @import 'chunk/examples';
 @import 'chunk/steps';
 @import 'chunk/reviews';
+@import 'chunk/video-review';
 @import 'chunk/deadline';
 @import 'chunk/where';
 @import 'chunk/stock';
