--- a/assets/components/sidebar/_sidebar.scss
+++ b/assets/components/sidebar/_sidebar.scss
@@ -50,3 +50,34 @@
 		color: var(--light-color);
 	}
 }
+
+.sidebar-socials {
+	position: fixed;
+	left: 0;
+	top: 50%;
+	transform: translate(15px, -50%);
+
+	&__link {
+		display: block;
+		display: flex;
+		align-items: center;
+		margin-bottom: 20px;
+		border-radius: 100%;
+		box-shadow: 0 0 10px rgb(0 0 0 / 25%);
+		transition: transform 0.3s;
+
+		&:hover {
+			transform: scale(1.25);
+		}
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+
+	&__icon {
+		flex-shrink: 0;
+		width: 40px;
+		height: 40px;
+	}
+}
