--- a/assets/components/calc/calc.html
+++ b/assets/components/calc/calc.html
@@ -2,9 +2,9 @@
 	<h2 class="calc__title">Площадь помещения,&#160;м<sup>2</sup></h2>
 
 	<div class="calc__square calc-square">
-		<input class="calc-square__range" id="calcRange" type="range" />
+		<input class="calc-square__range" id="calcRange" type="range" value="36" min="1" max="400" />
 		<label class="calc-square__label" for="calcRange">
-			<output class="calc-square__value">32</output>
+			<output class="calc-square__value">36</output>
 		</label>
 	</div>
 
@@ -12,20 +12,32 @@
 
 	<div class="calc__type calc-type">
 		<div class="calc-type__item">
-			<input class="calc-type__radio" id="draftRepair" name="radio" type="radio" />
-			<label class="calc-type__value" for="draftRepair">Черновой</label>
+			<label class="calc-type__value" for="draftRepair">
+				<input class="calc-type__radio-real" id="draftRepair" name="radio" type="radio" />
+				<span class="calc-type__radio-fake"></span>
+				<span class="task__name">Черновой</span>
+			</label>
 		</div>
 		<div class="calc-type__item">
-			<input class="calc-type__radio" id="capitalRepair" name="radio" type="radio" />
-			<label class="calc-type__value" for="capitalRepair">Капитальный</label>
+			<label class="calc-type__value" for="capitalRepair">
+				<input class="calc-type__radio-real" id="capitalRepair" name="radio" type="radio" />
+				<span class="calc-type__radio-fake"></span>
+				<span class="task__name">Капитальный</span>
+			</label>
 		</div>
 		<div class="calc-type__item">
-			<input class="calc-type__radio" id="cosmeticRepair" name="radio" type="radio" />
-			<label class="calc-type__value" for="cosmeticRepair">Косметический</label>
+			<label class="calc-type__value" for="cosmeticRepair">
+				<input class="calc-type__radio-real" id="cosmeticRepair" name="radio" type="radio" />
+				<span class="calc-type__radio-fake"></span>
+				<span class="task__name">Косметический</span>
+			</label>
 		</div>
 		<div class="calc-type__item">
-			<input class="calc-type__radio" id="eliteRepair" name="radio" type="radio" />
-			<label class="calc-type__value" for="eliteRepair">Элитный</label>
+			<label class="calc-type__value" for="eliteRepair">
+				<input class="calc-type__radio-real" id="eliteRepair" name="radio" type="radio" />
+				<span class="calc-type__radio-fake"></span>
+				<span class="task__name">Элитный</span>
+			</label>
 		</div>
 	</div>
 
