--- a/assets/components/calc/calc.html
+++ b/assets/components/calc/calc.html
@@ -4,7 +4,9 @@
 	<div class="calc__square calc-square">
 		<input class="calc-square__range" id="calcRange" type="range" value="36" min="1" max="400" />
 		<label class="calc-square__label" for="calcRange">
-			<output class="calc-square__value">36</output>
+			<button class="calc-square__button btn-reset" id="randgeSubtraction" type="button">-</button>
+			<input class="calc-square__value" type="text" value="36" />
+			<button class="calc-square__button btn-reset" id="randgeAdd" type="button">+</button>
 		</label>
 	</div>
 
@@ -13,7 +15,7 @@
 	<div class="calc__type calc-type">
 		<div class="calc-type__item">
 			<label class="calc-type__value" for="draftRepair">
-				<input class="calc-type__radio-real" id="draftRepair" name="radio" type="radio" />
+				<input class="calc-type__radio-real" id="draftRepair" name="radio" type="radio" checked />
 				<span class="calc-type__radio-fake"></span>
 				<span class="task__name">Черновой</span>
 			</label>
@@ -43,7 +45,7 @@
 
 	<h2 class="calc__title">Стоимость ремонта:</h2>
 
-	<output class="calc__cost">158 000₽</output>
+	<output class="calc__cost">108 720&#8381;</output>
 
 	<div class="calc__inner">
 		<input class="calc__phone" id="calcPhone" type="text" placeholder="Ваш телефон" />
