Правки в боковом меню

--- a/assets/components/header/header.html
+++ b/assets/components/header/header.html
@@ -30,7 +30,7 @@
 		</button>
 	</div>
 	<div class="header__menu menu">
-		<div class="header__container">
+		<div class="header__container header__container--bottom">
 			<nav class="menu__body">
 				<ul class="menu__list list-reset">
 					<li class="menu__item">
