Правки по сайту и вёрстка нижнего меню

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -47,6 +47,7 @@
 @import 'chunk/tags';
 @import 'chunk/footer';
 @import '../components/sidebar/sidebar';
+@import 'chunk/menu-bottom';
 
 @import 'chunk/product-repair';
 @import 'chunk/product-stages';
