--- a/assets/scss/chunk/_where.scss
+++ b/assets/scss/chunk/_where.scss
@@ -39,6 +39,13 @@
 	&:hover {
 		box-shadow: 0 20px 20px rgb(0 0 0 / 25%);
 		transform: translateY(-15px);
+
+		@media (max-width: 768px) {
+			&:hover {
+				box-shadow: 0 0 0 rgb(0 0 0 / 0%);
+				transform: translateY(0);
+			}
+		}
 	}
 
 	@media (max-width: 576px) {
