--- a/assets/scss/chunk/_experts.scss
+++ b/assets/scss/chunk/_experts.scss
@@ -10,6 +10,7 @@
 	box-shadow: 0 0 10px rgb(0 0 0 / 25%);
 	text-align: center;
 	gap: 20px;
+	background-color: var(--light-color);
 
 	&__avatar {
 		border-radius: 100%;
