Скрипт для таблиц

--- a/assets/components/tabs/tabs.html
+++ b/assets/components/tabs/tabs.html
@@ -70,7 +70,7 @@
 						</tr>
 						<tr class="table__row">
 							<td class="table__item table__item--center" colspan="3">
-								<a class="link link-reset" href="#/">Показать ещё</a>
+								<button class="table__btn btn-reset">Показать ещё</button>
 							</td>
 						</tr>
 					</tbody>
@@ -135,7 +135,7 @@
 						</tr>
 						<tr class="table__row">
 							<td class="table__item table__item--center" colspan="3">
-								<a class="link link-reset" href="#/">Показать ещё</a>
+								<button class="table__btn btn-reset">Показать ещё</button>
 							</td>
 						</tr>
 					</tbody>
@@ -200,7 +200,7 @@
 						</tr>
 						<tr class="table__row">
 							<td class="table__item table__item--center" colspan="3">
-								<a class="link link-reset" href="#/">Показать ещё</a>
+								<button class="table__btn btn-reset">Показать ещё</button>
 							</td>
 						</tr>
 					</tbody>
@@ -265,7 +265,7 @@
 						</tr>
 						<tr class="table__row">
 							<td class="table__item table__item--center" colspan="3">
-								<a class="link link-reset" href="#/">Показать ещё</a>
+								<button class="table__btn btn-reset">Показать ещё</button>
 							</td>
 						</tr>
 					</tbody>
@@ -330,7 +330,7 @@
 						</tr>
 						<tr class="table__row">
 							<td class="table__item table__item--center" colspan="3">
-								<a class="link link-reset" href="#/">Показать ещё</a>
+								<button class="table__btn btn-reset">Показать ещё</button>
 							</td>
 						</tr>
 					</tbody>
@@ -395,7 +395,7 @@
 						</tr>
 						<tr class="table__row">
 							<td class="table__item table__item--center" colspan="3">
-								<a class="link link-reset" href="#/">Показать ещё</a>
+								<button class="table__btn btn-reset">Показать ещё</button>
 							</td>
 						</tr>
 					</tbody>
@@ -460,7 +460,7 @@
 						</tr>
 						<tr class="table__row">
 							<td class="table__item table__item--center" colspan="3">
-								<a class="link link-reset" href="#/">Показать ещё</a>
+								<button class="table__btn btn-reset">Показать ещё</button>
 							</td>
 						</tr>
 					</tbody>
@@ -525,7 +525,7 @@
 						</tr>
 						<tr class="table__row">
 							<td class="table__item table__item--center" colspan="3">
-								<a class="link link-reset" href="#/">Показать ещё</a>
+								<button class="table__btn btn-reset">Показать ещё</button>
 							</td>
 						</tr>
 					</tbody>
@@ -590,7 +590,7 @@
 						</tr>
 						<tr class="table__row">
 							<td class="table__item table__item--center" colspan="3">
-								<a class="link link-reset" href="#/">Показать ещё</a>
+								<button class="table__btn btn-reset">Показать ещё</button>
 							</td>
 						</tr>
 					</tbody>
@@ -655,7 +655,7 @@
 						</tr>
 						<tr class="table__row">
 							<td class="table__item table__item--center" colspan="3">
-								<a class="link link-reset" href="#/">Показать ещё</a>
+								<button class="table__btn btn-reset">Показать ещё</button>
 							</td>
 						</tr>
 					</tbody>
