--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -275,6 +275,7 @@
 			border-bottom: 1px solid #dfdfdf;
 
 			&:last-child {
+				display: none;
 				border: none;
 			}
 		}
@@ -310,6 +311,20 @@
 
 		&--center {
 			text-align: center !important;
+		}
+	}
+
+	&__btn {
+		border-radius: 15px;
+		padding: 10px 20px;
+		text-align: center;
+		color: var(--light-color);
+		background-color: var(--accent-color);
+		transition: filter 0.3s;
+		cursor: pointer;
+
+		&:hover {
+			filter: brightness(113%);
 		}
 	}
 }
