Добавление маски на поля с телефонами

--- a/assets/components/calc/calc.html
+++ b/assets/components/calc/calc.html
@@ -48,7 +48,7 @@
 	<output class="calc__cost">108 720&#8381;</output>
 
 	<div class="calc__inner">
-		<input class="calc__phone" id="calcPhone" type="text" placeholder="Ваш телефон" />
+		<input class="calc__phone" id="calcPhone" type="tel" placeholder="Ваш телефон" />
 		<input class="calc__send" id="calcSend" type="submit" value="Отправить" />
 	</div>
 
