--- a/assets/components/modal/modal-application.html
+++ b/assets/components/modal/modal-application.html
@@ -61,7 +61,7 @@
 			</div>
 			<div class="form__inputs">
 				<input class="form__input-text" type="text" placeholder="Ваше имя" />
-				<input class="form__input-text" type="text" placeholder="Ваш телефон" />
+				<input class="form__input-text" type="tel" placeholder="Ваш телефон" />
 				<input class="btn-reset form__input-button" type="submit" value="Отправить" />
 			</div>
 			<p class="form__text">
