--- a/assets/components/modal/modal-stock.html
+++ b/assets/components/modal/modal-stock.html
@@ -8,13 +8,7 @@
 			</p>
 			<div class="form__socials">
 				<div class="form__social form-social">
-					<input
-						class="is-hidden"
-						id="telegramStock"
-						name="social"
-						type="radio"
-						value="telegram"
-					/>
+					<input class="is-hidden" id="telegramStock" name="social" type="radio" value="telegram" />
 					<label class="form-social__label" for="telegramStock">
 						<svg class="form-social__icon">
 							<use href="img/icons/sprite.svg#telegram-icon"></use>
@@ -24,13 +18,7 @@
 				</div>
 
 				<div class="form__social form-social">
-					<input
-						class="is-hidden"
-						id="whatsappStock"
-						name="social"
-						type="radio"
-						value="whatsapp"
-					/>
+					<input class="is-hidden" id="whatsappStock" name="social" type="radio" value="whatsapp" />
 					<label class="form-social__label" for="whatsappStock">
 						<svg class="form-social__icon">
 							<use href="img/icons/sprite.svg#whatsapp-icon"></use>
@@ -61,7 +49,7 @@
 			</div>
 			<div class="form__inputs">
 				<input class="form__input-text" type="text" placeholder="Ваше имя" />
-				<input class="form__input-text" type="text" placeholder="Ваш телефон" />
+				<input class="form__input-text" type="tel" placeholder="Ваш телефон" />
 				<input class="btn-reset form__input-button" type="submit" value="Отправить" />
 			</div>
 			<p class="form__text">
