--- a/assets/scss/chunk/_gallery.scss
+++ b/assets/scss/chunk/_gallery.scss
@@ -1,4 +1,8 @@
 .gallery {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
 	&__wrap {
 		display: flex;
 		gap: 20px;
@@ -12,5 +16,10 @@
 		width: 100%;
 		min-height: 150px;
 		max-width: 300px;
+	}
+
+	&__link {
+		display: none;
+		margin-top: 40px;
 	}
 }
