--- a/assets/scss/chunk/_cost.scss
+++ b/assets/scss/chunk/_cost.scss
@@ -18,7 +18,12 @@
 
 	&__img {
 		position: relative;
-		height: auto;
+		flex-shrink: 0;
+		width: 100%;
+		height: 160px;
+		background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
 	}
 
 	&__deadline {
