--- a/assets/scss/chunk/_examples.scss
+++ b/assets/scss/chunk/_examples.scss
@@ -9,6 +9,7 @@
 		align-items: stretch;
 		justify-content: center;
 		gap: 30px;
+		width: 100%;
 	}
 
 	&__btn {
@@ -26,6 +27,7 @@
 	flex-direction: column;
 	overflow: hidden;
 	border-radius: 15px;
+	width: 100%;
 	min-height: 440px;
 	max-width: 355px;
 	box-shadow: 0 0 10px rgb(0 0 0 / 25%);
@@ -33,7 +35,11 @@
 
 	&__img {
 		position: relative;
-		height: auto;
+		flex-shrink: 0;
+		height: 160px;
+		background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
 	}
 
 	&__deadline {
