Подключение скрипта для скрытия лишних элементов в секцию с тегами

--- a/assets/components/header/header.html
+++ b/assets/components/header/header.html
@@ -37,7 +37,7 @@
 						<a class="menu__link link-reset" href="#" data-goto=".section-1">О компании</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__link link-reset" href="#" data-goto=".section-2">Ремонт</a>
+						<a class="menu__link link-reset" href="product-page.html" data-goto=".section-2">Ремонт</a>
 					</li>
 					<li class="menu__item">
 						<a class="menu__link link-reset" href="#" data-goto=".section-3">Другие услуги</a>
