--- a/assets/scss/chunk/_product-stages.scss
+++ b/assets/scss/chunk/_product-stages.scss
@@ -53,6 +53,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		overflow: hidden;
 		margin: 0 auto;
 		border-radius: 15px;
 		padding: 20px 25px;
@@ -66,6 +67,7 @@
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
+	animation: fade-in-left 1s;
 
 	&__info {
 		width: 45%;
