Правки в галерее и боковом меню

--- a/assets/components/sidebar/sidebar.html
+++ b/assets/components/sidebar/sidebar.html
@@ -1,23 +1,23 @@
 <aside class="sidebar">
-	<a class="sidebar__link link-reset" href="#/">
+	<a class="sidebar__link link-reset modal-link" href="#modalQuiz">
 		<svg class="sidebar__icon">
 			<use href="img/icons/sprite.svg#rub"></use>
 		</svg>
 		<span class="sidebar__descr">Рассчитать стоимость ремонта</span>
 	</a>
-	<a class="sidebar__link link-reset" href="#/">
+	<a class="sidebar__link link-reset modal-link" href="#modalInstallment">
 		<svg class="sidebar__icon">
 			<use href="img/icons/sprite.svg#installment"></use>
 		</svg>
 		<span class="sidebar__descr">Узнать о рассрочке</span>
 	</a>
-	<a class="sidebar__link link-reset" href="#/">
+	<a class="sidebar__link link-reset modal-link" href="#modalQuestion">
 		<svg class="sidebar__icon">
 			<use href="img/icons/sprite.svg#question"></use>
 		</svg>
 		<span class="sidebar__descr">Задать вопрос</span>
 	</a>
-	<a class="sidebar__link link-reset" href="#/">
+	<a class="sidebar__link link-reset modal-link" href="#modalStock">
 		<svg class="sidebar__icon">
 			<use href="img/icons/sprite.svg#gift"></use>
 		</svg>
