--- a/assets/components/slider/slider-reviews.html
+++ b/assets/components/slider/slider-reviews.html
@@ -18,6 +18,6 @@
 			</div>
 		</div>
 	</div>
-	<div class="swiper-btn swiper-btn--prev reviews-btn--prev"></div>
-	<div class="swiper-btn swiper-btn--next reviews-btn--next"></div>
+	<div class="swiper-btn swiper-btn--prev reviews-btn reviews-btn--prev"></div>
+	<div class="swiper-btn swiper-btn--next reviews-btn reviews-btn--next"></div>
 </div>
