--- a/assets/components/header/header.html
+++ b/assets/components/header/header.html
@@ -18,14 +18,12 @@
 				</svg>
 				<div class="links__item links-item">
 					<a class="links-item__phone link-reset" href="tel:+79999999999">8-999-999-99-99</a>
-					<a class="links-item__modal link-reset modal-link" href="#modalApplication"
-						>Оставить заявку</a
-					>
+					<a class="links-item__modal link-reset modal-link" href="#modalApplication">Оставить заявку</a>
 				</div>
 			</div>
 			<a class="header__link link link-reset modal-link" href="#modalQuiz">Рассчитать стоимость</a>
 		</div>
-		<button class="menu__burger burger btn-reset">
+		<button class="burger btn-reset">
 			<span class="burger__line"></span>
 		</button>
 	</div>
@@ -52,9 +50,7 @@
 						<a class="menu__link link-reset" href="#" data-goto=".section-3">Акции и скидки</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__link link-reset" href="#" data-goto=".section-3"
-							>Наши работы и отзывы</a
-						>
+						<a class="menu__link link-reset" href="#" data-goto=".section-3">Наши работы и отзывы</a>
 					</li>
 					<li class="menu__item">
 						<a class="menu__link link-reset" href="#" data-goto=".section-3">Контакты</a>
