--- a/assets/components/slider/slider.html
+++ b/assets/components/slider/slider.html
@@ -3,36 +3,27 @@
 		<div class="swiper-wrapper">
 			<div class="swiper-slide">
 				<div class="experts__card experts-card">
-					<div
-						class="experts-card__avatar"
-						style="background-image: url('./img/experts/experts-avatar-1.png')"
-					></div>
+					<div class="experts-card__avatar" style="background-image: url('./img/experts/experts-avatar-1.png')"></div>
 					<h3 class="experts-card__name">Головин Тимур Ярославович</h3>
 					<span class="experts-card__descr"> Мастер-универсал </span>
 				</div>
 			</div>
 			<div class="swiper-slide">
 				<div class="experts__card experts-card">
-					<div
-						class="experts-card__avatar"
-						style="background-image: url('./img/experts/experts-avatar-1.png')"
-					></div>
+					<div class="experts-card__avatar" style="background-image: url('./img/experts/experts-avatar-1.png')"></div>
 					<h3 class="experts-card__name">Головин Тимур Ярославович</h3>
 					<span class="experts-card__descr"> Мастер-универсал </span>
 				</div>
 			</div>
 			<div class="swiper-slide">
 				<div class="experts__card experts-card">
-					<div
-						class="experts-card__avatar"
-						style="background-image: url('./img/experts/experts-avatar-1.png')"
-					></div>
+					<div class="experts-card__avatar" style="background-image: url('./img/experts/experts-avatar-1.png')"></div>
 					<h3 class="experts-card__name">Головин Тимур Ярославович</h3>
 					<span class="experts-card__descr"> Мастер-универсал </span>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="swiper-btn swiper-btn--prev experts-btn--prev"></div>
-	<div class="swiper-btn swiper-btn--next experts-btn--next"></div>
+	<div class="swiper-btn swiper-btn--prev experts-btn experts-btn--prev"></div>
+	<div class="swiper-btn swiper-btn--next experts-btn experts-btn--next"></div>
 </div>
