--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -1,3 +1,22 @@
+.logo {
+	display: block;
+
+	&__img {
+		width: 200px;
+		height: auto;
+		fill: var(--accent-color);
+		transition: width 0.25s;
+
+		&--scroll {
+			width: 140px;
+		}
+
+		@media (max-width: 480px) {
+			width: 150px;
+		}
+	}
+}
+
 .section {
 	padding: 75px 0;
 
@@ -158,6 +177,7 @@
 
 		&--blue {
 			@include adaptive-font(19, 18);
+			margin-bottom: 0;
 			color: var(--accent-color);
 		}
 	}
@@ -346,10 +366,21 @@
 	}
 }
 
-.row {
-	display: table-row;
+.row-hidden {
+	display: none;
+}
 
-	&--hidden {
-		display: none;
-	}
+.iframe {
+	border: none;
+	width: 100%;
+}
+
+.visually-hidden {
+	position: absolute !important;
+	overflow: hidden;
+	border: 0 !important;
+	padding: 0 !important;
+	width: 1px !important;
+	height: 1px !important;
+	clip: rect(1px, 1px, 1px, 1px);
 }
