--- a/assets/scss/chunk/_product-repair.scss
+++ b/assets/scss/chunk/_product-repair.scss
@@ -13,8 +13,13 @@
 	&__img {
 		overflow: hidden;
 		border-radius: 15px;
+		width: 100%;
 		height: min-content;
+		height: 300px;
 		max-width: 460px;
+		background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
 	}
 
 	&__info {
