Смена формата изображений на .webp

--- a/assets/components/slider/slider-reviews.html
+++ b/assets/components/slider/slider-reviews.html
@@ -2,19 +2,19 @@
 	<div class="swiper reviews-slider">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide">
-				<div class="review" style="background-image: url('./img/reviews/reviews-photo-1.jpg')"></div>
+				<div class="review" style="background-image: url('./img/reviews/reviews-photo-1.webp')"></div>
 			</div>
 			<div class="swiper-slide">
-				<div class="review" style="background-image: url('./img/reviews/reviews-photo-2.jpg')"></div>
+				<div class="review" style="background-image: url('./img/reviews/reviews-photo-2.webp')"></div>
 			</div>
 			<div class="swiper-slide">
-				<div class="review" style="background-image: url('./img/reviews/reviews-photo-3.jpg')"></div>
+				<div class="review" style="background-image: url('./img/reviews/reviews-photo-3.webp')"></div>
 			</div>
 			<div class="swiper-slide">
-				<div class="review" style="background-image: url('./img/reviews/reviews-photo-4.jpg')"></div>
+				<div class="review" style="background-image: url('./img/reviews/reviews-photo-4.webp')"></div>
 			</div>
 			<div class="swiper-slide">
-				<div class="review" style="background-image: url('./img/reviews/reviews-photo-5.jpg')"></div>
+				<div class="review" style="background-image: url('./img/reviews/reviews-photo-5.webp')"></div>
 			</div>
 		</div>
 	</div>
