--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -21,14 +21,14 @@
 	padding: 75px 0;
 
 	&-foreman {
-		background-image: url('@img/foreman/foreman-bg.jpg');
+		background-image: url('@img/foreman/foreman-bg.webp');
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
 	}
 
 	&-installment {
-		background-image: url('@img/installment/installment-bg.jpg');
+		background-image: url('@img/installment/installment-bg.webp');
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
@@ -36,7 +36,7 @@
 
 	&-hero {
 		padding-top: 300px;
-		background-image: url('@img/hero/hero-bg.jpg');
+		background-image: url('@img/hero/hero-bg.webp');
 	}
 
 	&--decor {
